--- a/main.html
+++ b/main.html
@@ -4,13 +4,41 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<header class="header">
+	<h2>Shaw's News</h2>
+</header>
+<section class="Latest-News">
 
+	<div class="latest-news-section"> 
+	<h3>Latest News Articles</h3>
+		<ul>
+			<li>Article 1</li>
+			<li>Article 2</li>
+			<li>Article 3</li>
+		</ul>
+	</div>
+
+	<div class="main-article">
+
+		<h3>Main Article</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	</div>
+
+	<div class="pictorial-news-section">
+<h3>Pictorial News</h3>
+		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"alt="image 1">
+		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="image 2">
+		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="image 3">
+		
+		
+	</div>
+</section>
+	
 </body>
 
 </html>
